--- a/src/app/books/book-form/book-form.component.html
+++ b/src/app/books/book-form/book-form.component.html
@@ -23,15 +23,15 @@
           }
           <br>
           <label>Price <span>*</span></label>
-          <input type="number" step="0.01" formControlName="price" placeholder="Price" />
+          <input type="number" min="1" step="0.01" formControlName="price" placeholder="Price" />
           @if (invalidField('price')) {
-            <small style="color: red;">Price is required</small>
+            <small style="color: red;">{{priceMessage}}</small>
           }
           <br>
           <label>Stock <span>*</span></label>
           <input type="number" formControlName="stock" placeholder="Stock" />
           @if (invalidField('stock')) {
-            <small style="color: red;">Stock is required</small>
+            <small style="color: red;">{{stockMessage}}</small>
           }
           <br>
           <label>Image</label>
