--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -4,51 +4,64 @@
     <div class="login form">
       <header>Register</header>
       <form [formGroup]="myForm" (submit)="register()">
+        <label>Name <span style="color:red;">*</span></label>
         <input type="text" formControlName="name" placeholder="Name" />
         @if (invalidField('name')) {
-          <span class="form-text text-danger"> Name is required </span>
+          <small class="form-text text-danger"> Name is required </small>
         }
+        <br>
+        <label>Last name <span style="color:red;">*</span></label>
         <input
           type="text"
           formControlName="last_name"
           placeholder="Last name"
         />
         @if (invalidField('last_name')) {
-          <span class="form-text text-danger"> Last Name is required </span>
+          <small class="form-text text-danger"> Last Name is required </small>
         }
+        <br>
+        <label>Username <span style="color:red;">*</span></label>
         <input type="text" formControlName="username" placeholder="Username" />
         @if (invalidField('username')) {
-          <span class="form-text text-danger"> {{UsernameErrorMsg}} </span>
+          <small class="form-text text-danger"> {{UsernameErrorMsg}} </small>
         }
+        <br>
+        <label>Email <span style="color:red;">*</span></label>
         <input type="text" formControlName="email" placeholder="Email" />
         @if (invalidField('email')) {
-        <span class="form-text text-danger"> {{EmailErroMsg}} </span>
+        <small class="form-text text-danger"> {{EmailErroMsg}} </small>
         }
+        <br>
+        <label>Password <span style="color:red;">*</span></label>
         <input
           type="password"
           formControlName="password"
           placeholder="Password"
         />
         @if (invalidField('password')) {
-        <span class="form-text text-danger">
+        <small class="form-text text-danger">
           The password must have 8 characters
-        </span>
+        </small>
         }
+        <br>
+        <label>Confirm password <span style="color:red;">*</span></label>
         <input
           type="password"
           formControlName="confirmPassword"
           placeholder="Confirm your password"
         />
         @if(invalidField('confirmPassword')){
-          <span class="form-text text-danger">
+          <small class="form-text text-danger">
             The password must be equals
-          </span>
+          </small>
         }
+        <br>
+        <label>Address <span style="color:red;">*</span></label>
         <input type="text" formControlName="address" placeholder="Address" />
         @if(invalidField('address')){
-          <span class="form-text text-danger">
+          <small class="form-text text-danger">
             Address is required
-          </span>
+          </small>
         }
         <input type="submit" class="button" value="Register" />
       </form>
