--- a/src/app/books/books-cat/books-cat.component.html
+++ b/src/app/books/books-cat/books-cat.component.html
@@ -1,6 +1,9 @@
+<div style="margin: 5%;" class="catalog-title">
+  <h1>📚 Explore Our Collection of Books📚</h1>
+  <p>Discover a wide range of books carefully selected for you.</p>
+</div>
 
-<div class="select-container">
-  <label>Order by: </label>
+<div style="margin-bottom: -3%; margin-left: 8.2%;" class="select-container">
   <select
     [(ngModel)]="sortField"
     (change)="setPage(pageNumber, sortField, order)"
@@ -55,10 +58,10 @@
     </button>
     }
   </div>
-  <app-search-box (onSearch)="search($event)"></app-search-box>
 </div>
+<app-search-box (onSearch)="search($event)"></app-search-box>
 
-<div class="grid-container">
+<div class="grid-container" style="margin-right: 9%;">
   @for (book of books; track $index) {
     @if (book.available === true) {
       <div class="card" style="width: 18rem">
@@ -96,7 +99,7 @@
             </button>
           }
           @if (isLogin()===true) {
-            <button routerLink="/media/rent/{{book.mediaId}}" class="btn btn-outline-info">Rent this book!
+            <button routerLink="/media/rent/{{book.mediaId}}"  style="margin: 5px" class="btn btn-outline-primary">Rent this book!
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
                 <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0"/>
               </svg>
