--- a/src/app/books/books-cat/books-cat.component.css
+++ b/src/app/books/books-cat/books-cat.component.css
@@ -9,9 +9,22 @@
   margin-bottom: 20px;
 }
 
-img {
+.card {
+  height: 360px;
+  display: flex;
+  flex-direction: column;
+}
+
+.card img {
   height: 120px;
-  width: 287px;
+  object-fit: cover;
+  width: 100%;
+}
+
+.card-text {
+  overflow: hidden;
+  text-overflow: ellipsis; 
+  white-space: nowrap;
 }
 
 .custom-select {
@@ -27,17 +40,20 @@ img {
 
 .select-container {
   display: flex;
-  align-items: center; /* Alinea verticalmente los elementos */
+  align-items: center; 
   margin-left: 155px;
   margin-top: 30px;
 }
 
 .button-container {
-  margin-left: 10px; /* Espacio entre el select y el botón */
-  width: 100px;
+  display: flex;
+  justify-content: space-between;
+  width: 200px;
+  margin-left: 10px;
 }
 
 .customButton {
+  width: 90px; /* Ancho fijo para los botones */
   border: none;
   background-color: rgb(245, 245, 220, 100%);
   height: 35px;
@@ -77,3 +93,56 @@ img {
   font-weight: bold;
   color: #007bff;
 }
+
+.catalog-title {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.catalog-title h1 {
+  font-size: 36px;
+  font-weight: bold;
+  color: #4a90e2;
+  margin-bottom: 10px;
+}
+
+.catalog-title p {
+  font-size: 18px;
+  color: #666;
+}
+
+.select-container {
+  align-self: flex-start;
+  display: flex;
+  align-items: start;
+}
+
+.select-container select {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+  height: 45px;
+}
+
+.button-container {
+  display: flex;
+  align-items: center;
+  margin-left: 10px; 
+}
+
+.customButton {
+  background-color: #f0f0f0;
+  border: none;
+  border-radius: 5px; 
+  color: #555;
+  padding: 8px 12px;
+  cursor: pointer;
+  height: 45px;
+}
+
+.customButton:hover {
+  background-color: #ddd;
+  height: 45px;
+}
+
