--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,29 +2,35 @@
     display: grid;
     align-items: center;
     justify-content: center;
-    width: 100%; /* Cambiado a 100% para ocupar todo el ancho del contenedor padre */
-    height: 400px; /* Ajustado el alto del contenedor */
-    margin: 50px auto 0;
+    width: 100%;
+    height: 400px;
+    margin-left: 17%; 
+    margin-top: 2%;
     overflow: hidden;
+}
+
+.centered {
+    margin: 0 auto;
 }
 
 .slider-frame ul {
     display: flex;
     padding: 0;
-    width: 500%; /* Cambiado a 500% para tener suficiente espacio para las imágenes */
+    width: 500%;
     animation: slide 15s infinite alternate ease-in-out;
 }
 
 .slider-frame li {
-    width: 20%; /* Cambiado a 20% para acomodar cada imagen en una fila */
+    width: 20%;
     list-style: none;
 }
 
 .slider-frame img {
     width: 100%;
-    height: 100%; /* Ajustado el alto de las imágenes al 100% del contenedor */
-    object-fit: cover; /* Cambiado a 'cover' para que las imágenes cubran completamente el contenedor */
-    object-position: center; /* Cambiado a 'center' para centrar las imágenes verticalmente */
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+    object-position: center;
 }
 
 @keyframes slide {
@@ -53,7 +59,26 @@
     padding: 10px;
 }
 
-
 h2{
     margin: 30px;
 }
+
+.appear h1 {
+    font-weight: bold;
+    font-size: 75px;
+}
+
+.appear {
+    animation: fadeInAnimation 2s ease-out forwards;
+    opacity: 0;
+    margin-top: 2%;
+    font-weight: bold;
+    color: #4a90e2;
+    margin-bottom: 10px;
+}
+
+@keyframes fadeInAnimation {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
