--- a/src/app/movies/info/info.component.css
+++ b/src/app/movies/info/info.component.css
@@ -1,33 +1,42 @@
 .container {
-    display: flex;
-    background-color: #f8f9fa;
-    padding: 30px;
-    justify-content: center;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-bottom: 60px;
-  }
-  
-  .card-body{
-      height: 400px;
-  }
-  
-  img{
-      border-radius: 10px;
-  }
-  
-  label {
-    font-weight: bold;
-  }
-  
-  .btn-clear-background {
-      background-color: rgb(245, 245, 220,100%);
-      border-radius: 10px;
-      border: none;
-      color: antiquewhite;
-  }
-  
-  .btn-clear-background:hover {
-      background-color: #f0f0f0;
-  }
-  
+  display: flex;
+  background-color: #f8f9fa;
+  padding: 30px;
+  justify-content: center;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-bottom: 60px;
+}
+
+.card-body {
+  height: 470px;
+}
+
+img {
+  border-radius: 10px;
+}
+
+label {
+  font-weight: bold;
+}
+
+.btn-clear-background {
+  background-color: rgb(245, 245, 220, 100%);
+  border-radius: 10px;
+  border: none;
+  color: antiquewhite;
+}
+
+.btn-clear-background:hover {
+  background-color: #f0f0f0;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column; /* Alinea los elementos en columna */
+  align-items: flex-start; /* Alinea los elementos a la izquierda */
+}
+
+.form-label {
+  margin-bottom: 5px; /* Ajusta el margen inferior del label */
+}
