--- a/src/app/movies/info/info.component.html
+++ b/src/app/movies/info/info.component.html
@@ -16,6 +16,7 @@
         d="M12.5 15a.5.5 0 0 1-.5-.5v-13a.5.5 0 0 1 1 0v13a.5.5 0 0 1-.5.5M10 8a.5.5 0 0 1-.5.5H3.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L3.707 7.5H9.5a.5.5 0 0 1 .5.5"
       />
     </svg>
+    Back
   </button>
   <div class="container text-center my-5">
     <div class="row">
@@ -24,7 +25,7 @@
           class="card-img-top"
           src="{{ movie.imageUrl }}"
           alt="Book cover"
-          style="height: 400px; object-fit: cover"
+          style="height: 470px; object-fit: cover"
         />
       </div>
       <div class="col-md-6">
@@ -41,7 +42,7 @@
                 readonly
               />
             </div>
-
+            <br>
             <div class="form-group">
               <label for="title" class="form-label">Title</label>
               <input
@@ -53,7 +54,7 @@
                 readonly
               />
             </div>
-
+            <br>
             <div class="form-group">
               <label for="gender" class="form-label">Gender</label>
               <input
@@ -65,7 +66,7 @@
                 readonly
               />
             </div>
-
+            <br>
             <div class="form-group">
               <label for="releaseDate" class="form-label">Release Date</label>
               <input
@@ -77,7 +78,7 @@
                 readonly
               />
             </div>
-
+            <br>
             <div class="form-group">
               <label for="available" class="form-label">Available</label>
               <input
