--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -3,7 +3,7 @@ footer {
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: rgb(66, 141, 230,38%);
+  background-color: rgba(8, 57, 118);
   color: white;
   padding: 20px;
   text-align: center; 
