--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
 @if(!toLogin()){
     <footer>
         <div class="footer-content">
-            <p>Derechos de autor &copy; 2024 MediaRentalHub. Todos los derechos reservados.</p>
+            <h6 style="color: white;">Derechos de autor &copy; 2024 MediaRentalHub. Todos los derechos reservados.</h6>
         </div>
     </footer>
 }
