--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,31 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 body{
     background-color: rgb(245, 245, 220,100%);
+}
+
+*{
+   font-family:  'Poppins', sans-serif;   
+   font-size: 17px;
+} 
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f8f9fa;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #6c757d;
+    border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #495057;
+}
+
+
+img {
+    object-fit: cover;
 }
