--- a/src/app/books/info/info.component.html
+++ b/src/app/books/info/info.component.html
@@ -1,3 +1,6 @@
+<div class="alert alert-light text-center" role="alert">
+  <small>Welcome to the rating section! Feel free to share your opinion.</small>
+</div>
 <div class="container text-center my-5 position-relative">
   <button
     (click)="goTo()"
