--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="appear" align="center">
-  <h1>MediaRentalHub: Where entertainment finds its home</h1>
+  <h1>MediaRentalHub<br>
+    Where entertainment finds its home</h1>
 </div>
 
 <div class="slider-frame" style="height: 700px; width: 1000px;">
