--- a/src/app/media/rent/rent.component.html
+++ b/src/app/media/rent/rent.component.html
@@ -1,3 +1,6 @@
+<div class="alert alert-light text-center" role="alert">
+  <small>This is the purchase section, enjoy the book/movie.</small>
+</div>
 @if (show === false) {
 
 <div class="container text-center my-5 position-relative">
@@ -18,6 +21,7 @@
         d="M12.5 15a.5.5 0 0 1-.5-.5v-13a.5.5 0 0 1 1 0v13a.5.5 0 0 1-.5.5M10 8a.5.5 0 0 1-.5.5H3.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L3.707 7.5H9.5a.5.5 0 0 1 .5.5"
       />
     </svg>
+    Back
   </button>
 
   <div class="container mt-5">
@@ -27,14 +31,14 @@
           class="card-img-top"
           [src]="media.imageUrl"
           alt="Media cover"
-          style="height: 400px; object-fit: cover"
+          style="height: 490px; object-fit: cover"
         />
       </div>
 
       <div class="col-md-6">
         <div class="card">
           <div class="card-body">
-            <div class="mb-3">
+            <div class="form-group">
               <label for="title" class="form-label">Title</label>
               <input
                 id="title"
@@ -45,8 +49,8 @@
                 readonly
               />
             </div>
-
-            <div class="mb-3">
+            <br>
+            <div class="form-group">
               <label for="gender" class="form-label">Gender</label>
               <input
                 id="gender"
@@ -57,8 +61,8 @@
                 readonly
               />
             </div>
-
-            <div class="mb-3">
+            <br>
+            <div class="form-group">
               <label for="releaseDate" class="form-label">Release Date</label>
               <input
                 id="releaseDate"
@@ -69,8 +73,8 @@
                 readonly
               />
             </div>
-
-            <div class="mb-3">
+            <br>
+            <div class="form-group">
               <label for="available" class="form-label">Available</label>
               <input
                 id="available"
@@ -81,10 +85,14 @@
                 readonly
               />
             </div>
-
-            <div class="mb-3">
-              <button class="btn btn-outline-info" (click)="showPurchase()">
-                Show purchase to confirm!
+            <br>
+            <div class="form-group">
+              <button class="btn btn-outline-primary" (click)="showPurchase()">
+                Show the purchase to confirm!
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
+                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                  <path d="m10.97 4.97-.02.022-3.473 4.425-2.093-2.094a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05"/>
+                </svg>
               </button>
             </div>
           </div>
