--- a/src/styles.css
+++ b/src/styles.css
@@ -3,10 +3,10 @@ body{
     background-color: rgb(245, 245, 220,100%);
 }
 
-*{
+p, label, h2{
    font-family:  'Poppins', sans-serif;   
    font-size: 17px;
-} 
+}
 
 ::-webkit-scrollbar {
     width: 12px;
