--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 body{
     background-color: rgb(245, 245, 220,100%);
 }
 
 *{
+   font-family:  'Poppins', sans-serif;   
    font-size: 17px;
 }
 
