--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,7 +4,7 @@
     justify-content: center;
     width: 100%;
     height: 400px;
-    margin-left: 17%; 
+    margin-left: 23%; 
     margin-top: 2%;
     overflow: hidden;
 }
@@ -45,40 +45,63 @@
 }
 
 .container {
-    background-color: #f8f9fa; 
-    padding: 30px;
-    border-radius: 10px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    margin-bottom:  60px;
+  background-color: #f8f9fa;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-bottom: 60px;
 }
 
-.row{
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-    padding: 10px;
+.row {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  padding: 10px;
 }
 
-h2{
-    margin: 30px;
+h2 {
+  margin: 30px;
 }
 
 .appear h1 {
-    font-weight: bold;
-    font-size: 75px;
+  font-weight: bold;
+  font-size: 75px;
 }
 
 .appear {
-    animation: fadeInAnimation 2s ease-out forwards;
-    opacity: 0;
-    margin-top: 2%;
-    font-weight: bold;
-    color: #4a90e2;
-    margin-bottom: 10px;
+  animation: fadeInAnimation 2s ease-out forwards;
+  opacity: 0;
+  margin-top: 2%;
+  font-weight: bold;
+  color: #4a90e2;
+  margin-bottom: 10px;
 }
 
 @keyframes fadeInAnimation {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
+@media only screen and (max-width: 768px) {
+  .slider-frame {
+    height: 300px;
+    margin-left: 0;
+    margin-top: 2%; 
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .slider-frame {
+    height: 200px;
+    margin-left: 0;
+    margin-top: 2%; 
+  }
+
+  .slider-frame ul {
+    width: 1000%; 
+  }
+}
