--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -82,3 +82,55 @@ h2{
     100% { opacity: 1; }
 }
 
+@media only screen and (max-width: 600px) {
+
+    .appear h1 {
+        font-size: 24px;
+    }
+
+    .slider-frame {
+        overflow: hidden; 
+    }
+
+    .slider-frame ul {
+        display: flex;
+        padding: 0;
+        width: 500%; 
+        animation: slide 15s infinite alternate ease-in-out;
+        margin: 0;
+        list-style-type: none; 
+        transition: transform 0.5s ease;
+        transform: translateX(-20%);
+    }
+
+    .slider-frame li {
+        width: 100%; 
+        flex-shrink: 0;
+    }
+
+    .slider-frame img {
+        width: 100%;
+        height: auto; 
+        object-fit: cover; 
+        border-radius: 10px;
+    }
+
+    @keyframes slide {
+        0% { transform: translateX(0); }
+        100% { transform: translateX(-80%); }
+    }
+
+    h2 {
+        font-size: 24px; 
+    }
+
+
+    .card {
+        width: calc(50% - 20px); 
+        margin: 10px; 
+    }
+
+    .card img {
+        height: auto; 
+    }
+}
