--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     Where entertainment finds its home</h1>
 </div>
 
-<div class="slider-frame" style="height: 700px; width: 1000px;">
+<div class="slider-frame">
   <ul>
     <li><img src="../../assets/img/metalocus_cien_anos_soledad_rivera_03.jpg" /></li>
     <li><img src="../../assets/img/ForrestGump.jpg" /></li>
