--- a/src/app/books/search-box/search-box.component.css
+++ b/src/app/books/search-box/search-box.component.css
@@ -29,3 +29,25 @@
 .search-box-button:hover {
   background-color: #357ae8;
 }
+
+@media only screen and (max-width: 480px) {
+  
+  .search-box-container {
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    margin-left: 8% !important;
+    margin-top: 6%;
+
+  }
+
+  .search-box-input {
+    width: 200px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    color: #333;
+  }
+
+}
