--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,26 +2,21 @@
   display: grid;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 400px;
-  margin-left: 17%;
-  margin-top: 2%;
+  margin: 50px auto 0;
   overflow: hidden;
-}
-
-.centered {
-  margin: 0 auto;
+  height: 700px; 
+  width: 1000px;
 }
 
 .slider-frame ul {
   display: flex;
   padding: 0;
-  width: 500%;
+  width: 500%; /* Cambiado a 500% para tener suficiente espacio para las imágenes */
   animation: slide 15s infinite alternate ease-in-out;
 }
 
 .slider-frame li {
-  width: 20%;
+  width: 20%; 
   list-style: none;
 }
 
@@ -29,35 +24,18 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 10px;
   object-position: center;
 }
 
 @keyframes slide {
-  0% {
-    margin-left: 0;
-  }
-  20% {
-    margin-left: 0;
-  }
-  25% {
-    margin-left: -100%;
-  }
-  45% {
-    margin-left: -100%;
-  }
-  50% {
-    margin-left: -200%;
-  }
-  70% {
-    margin-left: -200%;
-  }
-  75% {
-    margin-left: -300%;
-  }
-  100% {
-    margin-left: -300%;
-  }
+  0% {margin-left: 0;}
+  20% {margin-left: 0;}
+  25% {margin-left: -100%;}
+  45% {margin-left: -100%;}
+  50% {margin-left: -200%;}
+  70% {margin-left: -200%;}
+  75% {margin-left: -300%;}
+  100% {margin-left: -300%;}
 }
 
 .container {
