--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,47 +1,41 @@
 .slider-frame {
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 400px;
-    margin-left: 23%; 
-    margin-top: 2%;
-    overflow: hidden;
-}
-
-.centered {
-    margin: 0 auto;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  margin: 50px auto 0;
+  overflow: hidden;
+  height: 700px; 
+  width: 1000px;
 }
 
 .slider-frame ul {
-    display: flex;
-    padding: 0;
-    width: 500%;
-    animation: slide 15s infinite alternate ease-in-out;
+  display: flex;
+  padding: 0;
+  width: 500%; /* Cambiado a 500% para tener suficiente espacio para las imágenes */
+  animation: slide 15s infinite alternate ease-in-out;
 }
 
 .slider-frame li {
-    width: 20%;
-    list-style: none;
+  width: 20%; 
+  list-style: none;
 }
 
 .slider-frame img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 10px;
-    object-position: center;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 @keyframes slide {
-    0% {margin-left: 0;}
-    20% {margin-left: 0;}
-    25% {margin-left: -100%;}
-    45% {margin-left: -100%;}
-    50% {margin-left: -200%;}
-    70% {margin-left: -200%;}
-    75% {margin-left: -300%;}
-    100% {margin-left: -300%;}
+  0% {margin-left: 0;}
+  20% {margin-left: 0;}
+  25% {margin-left: -100%;}
+  45% {margin-left: -100%;}
+  50% {margin-left: -200%;}
+  70% {margin-left: -200%;}
+  75% {margin-left: -300%;}
+  100% {margin-left: -300%;}
 }
 
 .container {
