--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+<ngx-ui-loader  fgsType="square-jelly-box"></ngx-ui-loader>
 <app-footer></app-footer>
