--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
     <div class="card" style="width: 18rem">
       <img
         class="card-img-top"
-        src="{{ book.imageUrl }}"
+        src="{{ book.image_url }}"
         alt="Card image cap"
         style="height: 200px; object-fit: cover"
       />
@@ -43,7 +43,7 @@
     <div class="card" style="width: 18rem">
       <img
         class="card-img-top"
-        src="{{ movie.imageUrl }}"
+        src="{{ movie.image_url }}"
         alt="Card image cap"
         style="height: 200px; object-fit: cover"
       />
@@ -67,7 +67,7 @@
     <div class="card" style="width: 18rem">
       <img
         class="card-img-top"
-        src="{{ movie.imageUrl }}"
+        src="{{ movie.image_url }}"
         alt="Card image cap"
         style="height: 200px; object-fit: cover"
       />
@@ -82,7 +82,7 @@
     <div class="card" style="width: 18rem">
       <img
         class="card-img-top"
-        src="{{ book.imageUrl }}"
+        src="{{ book.image_url }}"
         alt="Card image cap"
         style="height: 200px; object-fit: cover"
       />
@@ -98,7 +98,7 @@
     <div class="card" style="width: 18rem">
       <img
         class="card-img-top"
-        src="{{ movie.imageUrl }}"
+        src="{{ movie.image_url }}"
         alt="Card image cap"
         style="height: 200px; object-fit: cover"
       />
@@ -112,7 +112,7 @@
     <div class="card" style="width: 18rem">
       <img
         class="card-img-top"
-        src="{{ book.imageUrl }}"
+        src="{{ book.image_url }}"
         alt="Card image cap"
         style="height: 200px; object-fit: cover"
       />
@@ -129,7 +129,7 @@
     <div class="card" style="width: 18rem">
       <img
         class="card-img-top"
-        src="{{ movie.imageUrl }}"
+        src="{{ movie.image_url }}"
         alt="Card image cap"
         style="height: 200px; object-fit: cover"
       />
@@ -144,7 +144,7 @@
     <div class="card" style="width: 18rem">
       <img
         class="card-img-top"
-        src="{{ book.imageUrl }}"
+        src="{{ book.image_url }}"
         alt="Card image cap"
         style="height: 200px; object-fit: cover"
       />
