--- a/src/app/movies/info/info.component.html
+++ b/src/app/movies/info/info.component.html
@@ -26,7 +26,7 @@
       <div class="col-md-6 order-md-first">
         <img
           class="card-img-top"
-          src="{{ movie.imageUrl }}"
+          src="{{ movie.image_url }}"
           alt="Book cover"
           style="height: 490px; object-fit: cover"
         />
@@ -75,7 +75,7 @@
               <input
                 id="releaseDate"
                 name="releaseDate"
-                value="{{ movie.releaseDate }}"
+                value="{{ movie.release_date }}"
                 class="form-control"
                 type="text"
                 readonly
